Add comprehensive error handling and validation framework with service layer refactoring
- Implement custom exception hierarchy (ValidationException, AuthenticationException, DataAccessException, etc.)
- Add Jakarta Bean Validation with ValidatorUtil for DTO validation
- Introduce ErrorHandlingFilter for centralized exception handling across the application
- Refactor service layer with new TestRunnerService for test execution logic
- Add interface-based DAO pattern (ITestDao, IUserDao, IResultDao) for better abstraction
- Implement caching mechanisms in DAO layer for improved performance
- Add comprehensive logging with SLF4J and Logback configuration
- Enhance BaseServlet with new helper methods for session and test management
- Update servlet paths constants and improve URL routing structure
- Add thread-safe operations with ReadWriteLock in JsonFileDao
- Improve data validation and error messages throughout the application